--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,11 +1,3 @@
-name: Deploy Django to VPS
-
-on:
-  push:
-    branches: [ main, master ]
-  pull_request:
-    branches: [ main, master ]
-
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -24,73 +16,80 @@ jobs:
           - 5432:5432
 
     steps:
-    - uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.12'
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.12'
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        cd backendUrbanizacion/urbanizacion_backend
-        pip install -r requirements.txt
+      - name: Install dependencies
+        working-directory: billing_api/backendUrbanizacion/urbanizacion_backend
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
 
-    - name: Run tests
-      env:
-        DATABASE_URL: postgres://postgres:postgres@localhost:5432/postgres
-        SECRET_KEY: test-secret-key
-      run: |
-        cd backendUrbanizacion/urbanizacion_backend
-        python manage.py test
-
-  deploy:
+      - name: Run tests
+        working-directory: billing_api/backendUrbanizacion/urbanizacion_backend
+        env:
+          DATABASE_URL: postgres://postgres:postgres@localhost:5432/postgres
+          SECRET_KEY: test-secret-key
+        run: |
+          python manage.py test
+          deploy:
     needs: test
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master'
 
     steps:
-    - uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-    - name: Setup SSH
-      run: |
-        mkdir -p ~/.ssh
-        echo "${{ secrets.VPS_SSH_KEY }}" > ~/.ssh/id_rsa
-        chmod 600 ~/.ssh/id_rsa
-        ssh-keyscan -H ${{ secrets.VPS_HOST }} >> ~/.ssh/known_hosts
+      - name: Setup SSH
+        run: |
+          mkdir -p ~/.ssh
+          echo "${{ secrets.VPS_SSH_KEY }}" > ~/.ssh/id_ed25519
+          chmod 600 ~/.ssh/id_ed25519
+          ssh-keyscan -H ${{ secrets.VPS_HOST }} >> ~/.ssh/known_hosts
 
-    - name: Deploy to VPS
-      env:
-        VPS_HOST: ${{ secrets.VPS_HOST }}
-        VPS_USER: ${{ secrets.VPS_USERNAME }}
-        DEPLOY_PATH: ${{ secrets.DEPLOY_PATH }}
-        PROJECT_PATH: ${{ secrets.PROJECT_PATH }}
-        VENV_PATH: ${{ secrets.VENV_PATH }}
-      run: |
-        ssh $VPS_USER@$VPS_HOST "
-          set -e
+      - name: Deploy to VPS
+        env:
+          VPS_HOST: ${{ secrets.VPS_HOST }}
+          VPS_USER: ${{ secrets.VPS_USERNAME }}
+          PROJECT_PATH: ${{ secrets.PROJECT_PATH }}
+          VENV_PATH: ${{ secrets.VENV_PATH }}
+        run: |
+          ssh $VPS_USER@$VPS_HOST "
+            set -e
 
-          echo '1. Actualizando código...'
-          cd $DEPLOY_PATH/backendUrbanizacion
-          git fetch origin
-          git reset --hard origin/main
+            echo '🔐 Fix git safe directory'
+            git config --global --add safe.directory '*'
 
-          echo '2. Activando entorno virtual...'
-          source $VENV_PATH/bin/activate
+            echo '📂 Ir al proyecto'
+            cd $PROJECT_PATH
 
-          echo '3. Instalando dependencias...'
-          cd urbanizacion_backend
-          pip install -r requirements.txt
+            echo '⬇ Actualizando código'
+            git fetch origin
+            git reset --hard origin/main
 
-          echo '4. Aplicando migraciones...'
-          python manage.py migrate --noinput
+            echo '🐍 Activando entorno virtual'
+            source $VENV_PATH/bin/activate
 
-          echo '5. Colectando archivos estáticos...'
-          python manage.py collectstatic --noinput --clear
+            echo '📦 Instalando dependencias'
+            pip install -r requirements.txt
 
-          echo '6. Reiniciando servicios...'
-          sudo systemctl restart gunicorn
-          sudo systemctl restart nginx
+            echo '🌱 Variables de entorno'
+            set -a
+            source .env
+            set +a
 
-          echo '✅ Despliegue completado'
+            echo '🗄 Migraciones'
+            python manage.py migrate --noinput
+
+            echo '🎨 Static files'
+            python manage.py collectstatic --noinput --clear
+
+            echo '🔁 Reiniciando servicios'
+            sudo systemctl restart gunicorn
+            sudo systemctl restart nginx
+
+            echo '✅ Deploy completado'
