--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,6 +13,8 @@ jobs:
         image: postgres:13
         env:
           POSTGRES_PASSWORD: postgres
+          POSTGRES_USER: postgres
+          POSTGRES_DB: postgres
         options: >-
           --health-cmd pg_isready
           --health-interval 10s
@@ -22,23 +24,26 @@ jobs:
           - 5432:5432
 
     steps:
-      - uses: actions/checkout@v4
+      - name: 📥 Checkout código
+        uses: actions/checkout@v4
 
-      - name: Set up Python
+      - name: 🐍 Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: '3.12'
 
-      - name: Install dependencies
+      - name: 📦 Install dependencies
         run: |
+          cd urbanizacion_backend
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: Run tests
+      - name: 🧪 Run tests
         env:
           DATABASE_URL: postgres://postgres:postgres@localhost:5432/postgres
           SECRET_KEY: test-secret-key
         run: |
+          cd urbanizacion_backend
           python manage.py test
 
   deploy:
@@ -47,16 +52,17 @@ jobs:
     if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master'
 
     steps:
-      - uses: actions/checkout@v4
+      - name: 📥 Checkout código
+        uses: actions/checkout@v4
 
-      - name: Setup SSH
+      - name: 🔐 Setup SSH
         run: |
           mkdir -p ~/.ssh
           echo "${{ secrets.VPS_SSH_KEY }}" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
           ssh-keyscan -H ${{ secrets.VPS_HOST }} >> ~/.ssh/known_hosts
 
-      - name: Deploy to VPS
+      - name: 🚀 Deploy to VPS
         env:
           VPS_HOST: ${{ secrets.VPS_HOST }}
           VPS_USER: ${{ secrets.VPS_USERNAME }}
@@ -72,6 +78,9 @@ jobs:
             echo "🔄 Actualizando código"
             git fetch origin
             git reset --hard origin/main
+
+            echo "📂 Entrando a Django project"
+            cd urbanizacion_backend
 
             echo "🐍 Activando entorno virtual"
             source $VENV_PATH/bin/activate
@@ -90,3 +99,4 @@ jobs:
             sudo systemctl restart nginx
 
             echo "✅ DEPLOY COMPLETADO"
+          EOF
