--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -106,3 +106,37 @@ jobs:
 
             echo "✅ DEPLOY COMPLETADO"
           EOF
+          
+          ssh $VPS_USER@$VPS_HOST << EOF
+          set -e
+
+          echo "===== DEBUG START ====="
+
+          echo "🔹 Usuario remoto:"
+          whoami
+
+          echo "🔹 Directorio inicial:"
+          pwd
+
+          echo "🔹 PROJECT_PATH recibido:"
+          echo "$PROJECT_PATH"
+
+          echo "🔹 Contenido de PROJECT_PATH:"
+          ls -la $PROJECT_PATH || echo "❌ No se pudo listar PROJECT_PATH"
+
+          echo "🔹 Entrando a PROJECT_PATH"
+          cd $PROJECT_PATH || { echo "❌ cd falló"; exit 1; }
+
+          echo "🔹 Directorio actual:"
+          pwd
+
+          echo "🔹 ¿Existe .git?"
+          ls -la .git || echo "❌ .git NO existe aquí"
+
+          echo "🔹 Estado git:"
+          git status || echo "❌ git status falló"
+
+          echo "===== DEBUG END ====="
+
+          # 🔽 luego sigue tu deploy normal
+          EOF
